--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   "homepage": "https://github.com/majashryer9/nice-neighbor-backend#readme",
   "devDependencies": {
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.32",
     "nodemon": "^2.0.1",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.12"
   }
 }
